Modifica ai sottoriquadri e cambio nome delle classi

--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 </head>
 <body>
     <header>
-    <div class="PrimoRiquadro"></div>
+    <div class="primo_riquadro"></div>
     </header>
     <section>
-        <div class="SecondoRiquadro"></div>
+        <div class="secondo_riquadro"></div>
     </section>
     <section>
-        <div class="TerzoRiquadro">
-            <div class="SottoRiquadro1">
+        <div class="terzo_riquadro">
+            <div class="sotto_riquadro1">
 
             </div>
-            <div class="SottoRiquadro2">
+            <div class="sotto_riquadro2">
 
             </div>
-            <div class="SottoRiquadro3">
+            <div class="sotto_riquadro3">
             </div>
-            <div class="SottoRiquadro4">
+            <div class="sotto_riquadro4">
                 </div>
-                <div class="Clear"></div>
+                <div class="clear"></div>
         </div>
     </section>
     <footer>
-        <div class="QuartoRiquadro">
+        <div class="quarto_riquadro">
             </div>
         </div>
     </footer>
