--- a/index.html
+++ b/index.html
@@ -8,31 +8,36 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Primo Riquadro -->
     <header>
     <div class="primo_riquadro"></div>
     </header>
+    <!-- Secondo Riquadro -->
     <section>
         <div class="secondo_riquadro"></div>
     </section>
-    <section>
+    <!-- Terzo Riquadro -->
+    <main>
         <div class="terzo_riquadro">
-            <div class="sotto_riquadro1">
+             <section>
+              <div class="sotto_riquadro1">
+              </div>
 
-            </div>
-            <div class="sotto_riquadro2">
+              <div class="sotto_riquadro2">
+              </div>
 
-            </div>
-            <div class="sotto_riquadro3">
-            </div>
-            <div class="sotto_riquadro4">
-                </div>
-                <div class="clear"></div>
+              <div class="sotto_riquadro3">
+              </div>
+
+              <div class="sotto_riquadro4">
+              </div>
         </div>
-    </section>
+    </main>
+    <!-- Quarto Riquadro -->
     <footer>
         <div class="quarto_riquadro">
-            </div>
         </div>
     </footer>
+
 </body>
 </html>
